--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -53,3 +53,46 @@
   height: 20px;
   width: 20px;
 }
+
+/* nav icons  */
+.navIcon .xmarkIcon,
+.barsIcon {
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  display: none;
+  position: fixed;
+  top: 15px;
+  right: 30px;
+  color: white;
+}
+
+@media screen and (max-width: 762px) {
+  .header-wrapper {
+    display: block;
+    top: 0 !important;
+    position: fixed;
+  }
+
+  .nav-item {
+    display: none;
+    border: 1px solid #121d38;
+    width: 90%;
+    left: 20px;
+    margin-top: 310px;
+    position: fixed;
+    background: #0b1222;
+    padding: 20px 0;
+    text-align: center;
+  }
+
+  .nav-item a {
+    display: block;
+    margin: 10px;
+  }
+
+  .navIcon .xmarkIcon,
+  .barsIcon {
+    display: block;
+  }
+}
