--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   width: 100%;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 .header {
   display: flex;
@@ -10,6 +11,7 @@
   padding: 0 40px;
   border-bottom: 1px solid rgba(40, 45, 75);
   background: #0b1222;
+  height: 80px;
 }
 
 .header h2 a {
@@ -28,6 +30,7 @@
 }
 .nav-item a:hover {
   background: #1e293b;
+  color: white;
 }
 .nav-item button {
   padding: 6px 20px;
@@ -79,7 +82,7 @@
     border: 1px solid #121d38;
     width: 90%;
     left: 20px;
-    margin-top: 310px;
+    margin-top: 410px;
     position: fixed;
     background: #0b1222;
     padding: 20px 0;
