--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,22 +1,25 @@
 .social {
   background: #0b1120;
   padding: 30px 0;
-  border-top: 1px solid ;
+  border-top: 1px solid;
 }
 
 .icons-wrapper {
-    text-align: center;
+  text-align: center;
 }
 
 .icons-wrapper .footerIcons {
-    /* color: #16a6ee; */
-    font-size: 20px;
-    margin: 5px 10px;
-    background: #16A6EE;
-    color: white;
-    /* padding: 20px; */
-    height: 40px;
-    width: 40px;
-    padding: 10px;
-    border-radius: 5px;
+  font-size: 20px;
+  margin: 5px 10px;
+  background: #16a6ee;
+  color: white;
+  height: 40px;
+  width: 40px;
+  padding: 10px;
+  border-radius: 5px;
+  transition: all .2s ease-in-out;
+}
+
+.footerIcons:hover {
+  transform: scale(1.2);
 }
