--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -33,11 +33,10 @@
 
 .nav-tabs {
   border-bottom: 1px solid #16a6ee !important;
-  /* margin: 20px; */
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link {
-  margin: 5px;
+  margin-right: 5px;
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
@@ -52,3 +51,5 @@
   color: rgb(245, 242, 242) !important;
   background: #0582c02f;
 }
+
+
