update service page, for hover effect

--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -10,6 +10,31 @@
   color: white;
   margin: 20px 10px;
   border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  z-index: 1;
+}
+.inner-service-content::before {
+  content: "";
+  height: 0;
+  width: 100%;
+  position: absolute;
+  background-color: #16a6ee;
+  z-index: -1;
+  transition: 0.3s;
+  left: 0px;
+  overflow: hidden !important;
+  bottom: 0;
+  border-radius: 5px;
+}
+
+.inner-service-content:hover::before {
+  height: 100%;
+  color: white;
+}
+
+.inner-service-content:hover .services-inner-icon {
+  background: white;
 }
 
 .inner-service-content h2 {
@@ -51,5 +76,3 @@
   color: rgb(245, 242, 242) !important;
   background: #0582c02f;
 }
-
-
