quotes and articles template done

--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,6 +1,6 @@
 .skills {
   /* background: #172132; */
-  background: #0d1425;
+  background: #0e1527;
   padding-bottom: 50px;
   border-top: 1px solid #282d4b;
 }
