--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -22,6 +22,7 @@
 .carousel-item p {
   font-family: "poppins", sans-serif;
   color: #c6c8cf;
+  /* font-family: 'Itim', cursive; */
 }
 
 .team-member {
