--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -107,8 +107,8 @@
   }
 }
 
-@media screen and (min-width: 762px) {
+/* @media screen and (max-width: 762px) {
   .nav-item {
     display: block;
   }
-}
+} */
