--- a/src/components/QuotesAndArticles/QuotesAndArticles.css
+++ b/src/components/QuotesAndArticles/QuotesAndArticles.css
@@ -64,3 +64,31 @@
   color: #16a6ee;
   font-weight: bold;
 }
+
+.full-article {
+  height: 90vh;
+  background: #172132;
+  position: absolute;
+  width: 90%;
+  top: 50px;
+  /* left: 0; */
+  margin: 50px;
+  border-radius: 10px;
+}
+
+.full-article button {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  background: #273650;
+  font-size: 30px;
+  color: #16a6ee;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
