--- a/src/components/QuotesAndArticles/QuotesAndArticles.css
+++ b/src/components/QuotesAndArticles/QuotesAndArticles.css
@@ -3,6 +3,7 @@
   border-top: 1px solid #0d1425;
   border-top: 1px solid #282d4b;
   padding: 50px 0;
+  padding-top: 80px;
 }
 
 .articles-content {
