--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,19 @@
 /* p {
   font-family: 'Itim', cursive;
 } */
+
+.preloader-div {
+  width: 100%;
+  height: 100vh;
+  background: #0e1527;
+}
+.preloader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 5;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
