--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,11 +2,11 @@
   background: #0d1425;
   padding-top: 80px;
   border-top: 1px solid #282d4b;
+  padding-bottom: 60px;
 }
 .about-content-devide {
   display: flex;
   align-items: center;
- 
 }
 .about-text-content p {
   color: white;
@@ -15,10 +15,10 @@
 .inner-about-content {
   color: #bbbfc5;
   margin-top: 30px;
-  background: #0B1120;
+  background: #0b1120;
   padding: 20px;
   border-radius: 5px;
-  border: 1px solid #1D2431;
+  border: 1px solid #1d2431;
 }
 
 .inner-about-content > div {
@@ -31,4 +31,15 @@
   width: 20px;
   color: #119ae9;
   margin-right: 10px;
+}
+
+.about-img-content {
+  text-align: center;
+}
+
+.about-img-content img {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  margin-bottom: 20px;
 }
