--- a/src/components/UnderHeader/UnderHeader.css
+++ b/src/components/UnderHeader/UnderHeader.css
@@ -63,11 +63,16 @@
 .underHeader-buttons button:last-child:hover {
   background: #2c3d5a;
 }
+.underHeader-img-side {
+  text-align: right;
+}
 .underHeader-img-side img {
-  width: 90%;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
 }
 
-@media screen and (max-width: 762px) {
+@media screen and (max-width: 788px) {
   .underHeader-wrapper {
     height: 100%;
   }
@@ -81,5 +86,14 @@
   .underHeader_item {
     padding: 0 20px;
     padding-top: 50px;
+  }
+  /* .underHeader-img-side img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+  } */
+
+  .underHeader-img-side {
+    text-align: center;
   }
 }
